# C_Assignment

./: 2019-C++课程设计题目(1).docx  C++课程设计报告封面(1).docx  README.md  ~$五班20187351李翔宇图书管理系统.doc  电信五班20187351李翔宇图书管理系统.doc  通信1801耿晓宇20187102员工休假管理系统.doc
Project/: .gitignore  CMakeLists.txt  File.cpp  File.h  LinkedList.cpp  LinkedList.h  Person.cpp  Person.h  Staff.cpp  Staff.h  Time.cpp  Time.h  main.cpp
